# flowby

./: .editorconfig  .env  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DRY_RUN_FEATURE.md  LICENSE  PROBLEM_ANALYSIS.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES_v6.0.0.md  SYNTAX_CLEANUP_ANALYSIS.md  TEST_FIXES_NEEDED.md  VR-002_实现分析报告.md  WAIT_DURATION_EXPRESSION_ANALYSIS.md  WAIT_DURATION_SUMMARY.txt  WAIT_SYNTAX_DIAGRAM.txt  WAIT_SYNTAX_REFERENCE.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_collections_manual.py  test_dry_run.flow  test_dry_run_error.flow  test_extended_collections.py  test_failures.txt  test_forward_ref.py  test_hello.flow  test_lib.flow  test_main_import.flow  test_simple.py  test_triple_quote_comment.flow  test_utility_functions.py  test_wait_examples.flow  (+3 more)
.ai-tasks/: README.md  TASK-001-REVIEW-REPORT.md  TASK-001-report-template.md  TASK-001-report.md  TASK-001-syntax-cleanup.md  TASK-002-fix-examples.md  TASK-002-report.md  TASK-TEMPLATE.md  TEST-FIXES-EXECUTION-REPORT.md
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_CHECKLIST.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  grammar-proposal-010.md
.github/workflows/: ci.yml  release.yml  test.yml
docs/: AI_INSTRUCTIONS.md  FLOWBY-GRAMMAR.ebnf  PHASE2_TASK5_COMPLETION.md  PHASE_1_2_SUMMARY.md  REVIEW_CHECKLIST.md  TEST_REBUILD_PLAN.md  USAGE_GUIDE.md  break_continue_implementation.md  collection_operations_design.md  i18n.md  parser_refactoring_plan.md  phase2_summary.md  quick-start.md  resource_imp.md  type_annotations_design.md  v6.4_collection_operations_summary.md
docs/analysis/: Flowby_DSL_深度分析报告.md  Parser阶段语义检查详解.md  README.md  type_语法设计分析.md  编译器遗产价值分析.md  语义检查系统完整分析报告.md
docs/proposals/: PROPOSAL-010-resource-constructor.md
examples/: .env  .env.email-service  account-service.yml  collection_operations_demo.flow  env_example.flow  extended_collections_demo.flow  hello_world.flow  loop_control_demo.flow  quick_start.flow  utility_functions_demo.flow  web_automation_demo.flow
examples/api_integration/: example-resource-basic.flow
examples/flows/: 0_test.flow  factory_ai.flow  factoryai_vars.json  fivesim_example.flow  fivesim_simple_example.flow  get_verdent.flow  verification_service_demo.flow  verification_service_simple.flow  verification_status_suite.flow  while_loop_test.flow
examples/libs/: automation_utils.flow  factory_ai_config.flow  sms_config.flow  sms_service_utils.flow
examples/module_system/: main_user_registration.flow
examples/openapi/: email-service.yml  fivesim-service.yml  registration-services.yml  user-service.yml
examples/web_automation/: factory_ai.flow
grammar/: ALIGNMENT-PROGRESS.md  ALIGNMENT-STATUS-CHECK.md  ALIGNMENT-STRATEGY.md  CHANGE-MANAGEMENT.md  CHANGELOG.md  COMPLIANCE-CHECK-INPUT-v5.1.md  COMPLIANCE-CHECK-v4.3.md  COVERAGE-REPORT-FINAL.md  COVERAGE-REPORT-V2.md  COVERAGE-REPORT.md  DESIGN-V3.md  DIRECTORY-STRUCTURE.md  DOCUMENTATION-UPDATE-v4.3.md  DSL-GRAMMAR-QUICK-REFERENCE.md  DSL-GRAMMAR.ebnf  DSL-SYNTAX-CHEATSHEET.md  EXAMPLES.flow  GOVERNANCE-PROCESS-SUMMARY.md  GOVERNANCE.md  MASTER-v2.0-backup.md  MASTER.md  MIGRATION-GUIDE-v3.1.md  PYTHON-ALIGNMENT-REVIEW.md  QUICKSTART.md  README.md  SUMMARY.md  V3-COVERAGE-REPORT.md  V3-EBNF.md  V3-EXAMPLES.flow  V3-PROGRESS-REPORT.md  V3-REFACTOR-PLAN.md  V5-EXAMPLES.flow  V6-EXAMPLES.flow  verify_grammar_coverage.py
grammar/proposals/: 002-pythonic-service-call.md  EXAMPLE-001-try-catch.md  PROPOSAL-002-IMPLEMENTATION-SUMMARY.md  README.md  (+14 more)
scripts/: README.md  check.bat  pre_commit.py  quality_check.py  quick_check.py  task_tracker.py
tests/: test_resource_constructor.flow  test_resource_constructor_simple_api.yml
tools/: migrate_v2_to_v3.py
(+102 files in other folders)
