[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowby"
version = "0.1.0"
description = "Elegant Web Automation DSL"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Flowby Contributors", email = "hello@flowby.dev"}
]
maintainers = [
    {name = "Flowby Contributors", email = "hello@flowby.dev"}
]
keywords = [
    "automation",
    "dsl",
    "web-automation",
    "workflow",
    "testing",
    "openapi",
    "declarative"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
requires-python = ">=3.8"
dependencies = [
    "playwright>=1.40.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "jsonschema>=4.20.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "flake8>=6.1.0",
    "black>=23.11.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "responses>=0.23.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
]

[project.urls]
Homepage = "https://flowby.dev"
Documentation = "https://docs.flowby.dev"
Repository = "https://github.com/flowby/flowby"
Changelog = "https://github.com/flowby/flowby/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/flowby/flowby/issues"

[project.scripts]
flowby = "flowby.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["flowby*"]

[tool.setuptools.package-data]
flowby = ["py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    # "--cov=flowby",
    # "--cov-report=term-missing",
    # "--cov-report=html",
]
markers = [
    "builtin: Tests for built-in functions and namespaces",
    "error: Tests for error handling and edge cases",
    "execution: Tests for execution flow and interpreter",
    "expressions: Tests for expression evaluation",
    "feature: Tests for specific DSL features",
    "integration: Integration tests",
    "priority: High-priority tests",
    "v3_specific: Tests specific to v3.0 syntax",
    "v31: Tests for v3.1 features",
    "v40: Tests for v4.0 features",
]

[tool.coverage.run]
source = ["src/flowby"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]
